--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -12,7 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="61dp"
         android:background="#D9D9D9"
-        tools:ignore="MissingConstraints" />
+        tools:ignore="MissingConstraints"/>
 
     <ImageView
         android:id="@+id/man_avatar"
@@ -22,7 +22,8 @@
         app:layout_constraintLeft_toLeftOf="@id/bgLabel"
         app:layout_constraintTop_toTopOf="@id/bgLabel"
         app:layout_constraintBottom_toBottomOf="@id/bgLabel"
-        android:contentDescription="@string/_1" />
+        android:contentDescription="@string/_1"
+        android:layout_marginStart="15dp"/>
 
     <TextView
         android:layout_width="wrap_content"
@@ -59,17 +60,8 @@
         app:layout_constraintTop_toBottomOf="@id/man_name"
         android:layout_marginStart="21dp"/>
 
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:contentDescription="@string/_1"
-        android:src="@drawable/curcle"
-        app:layout_constraintBottom_toBottomOf="@id/bgLabel"
-        app:layout_constraintRight_toRightOf="@id/bgLabel"
-        app:layout_constraintTop_toTopOf="@id/bgLabel"
-        tools:ignore="ImageContrastCheck" />
-    
     <LinearLayout
+        android:id="@+id/linear_layout"
         android:layout_width="174dp"
         android:layout_height="150dp"
         app:layout_constraintRight_toRightOf="parent"
@@ -113,4 +105,16 @@
             android:layout_marginStart="28dp"
             app:drawableEndCompat="@drawable/settings"/>
     </LinearLayout>
+
+    <ImageView
+        android:id="@+id/image_option"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:contentDescription="@string/_1"
+        android:src="@drawable/curcle"
+        app:layout_constraintBottom_toBottomOf="@id/bgLabel"
+        app:layout_constraintRight_toRightOf="@id/bgLabel"
+        app:layout_constraintTop_toTopOf="@id/bgLabel"
+        tools:ignore="ImageContrastCheck"
+        android:layout_marginEnd="15dp"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
